--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Health Measure</string>
+    <string name="user_name">User Name</string>
+    <string name="password">Password</string>
+    <string name="login">Log In</string>
 </resources>
